mobile ui structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Photo Blog</title>
     </head>
+
     <body>
-        <h1></h1>
+        <header class="debug d-flex content-center items-center">
+            <h1>Titolo Header</h1>
+        </header>
+        <main class="debug2 d-flex content-center items-center">
+            <div class="notes-wrapper d-flex flex-wrap">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+        </main>
     </body>
 </html>
