--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
         <header class="debug d-flex content-center items-center">
-            <h1>Titolo Header</h1>
+            <h1>estate '24</h1>
         </header>
         <main class="debug2 d-flex content-center items-center">
             <div class="notes-wrapper d-flex flex-wrap">
