--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
     </head>
 
     <body>
-        <header class="debug d-flex content-center items-center">
+        <header class="d-flex content-center items-center">
             <h1>estate '24</h1>
         </header>
-        <main class="debug2 d-flex content-center items-center">
+        <main class="d-flex content-center items-center">
             <div class="notes-wrapper d-flex flex-wrap">
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
-                <div class="box"></div>
+                <figcaption class="note d-flex flex-wrap">
+                    <img src="#" alt="img">
+                    <figcaption class="d-flex content-center items-center">Lorem ipsum dolor sit amet.</figcaption>
+                </figcaption>
             </div>
         </main>
     </body>
