sticky note ui polished

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         </header>
         <main class="d-flex content-center items-center">
             <div class="notes-wrapper d-flex flex-wrap">
+                <!--  -->
                 <figcaption class="note d-flex flex-wrap">
                     <img src="#" alt="img">
-                    <figcaption class="d-flex content-center items-center">Lorem ipsum dolor sit amet.</figcaption>
+                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
                 </figcaption>
+                <!--  -->
             </div>
         </main>
     </body>
