--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="notes-wrapper d-flex flex-wrap">
                 <!--  -->
                 <figcaption class="note d-flex flex-wrap">
+                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img src="#" alt="img">
                     <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
                 </figcaption>
