js dom elements selection

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <!--  -->
                 <figcaption class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
-                    <img src="#" alt="img">
+                    <img class="note-image" src="#" alt="img">
                     <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
                 </figcaption>
                 <!--  -->
