axios http request to jsonplaceholder (uncompleted)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,31 @@
                     <img class="note-image" src="#" alt="img">
                     <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
                 </figcaption>
+                <figcaption class="note d-flex flex-wrap">
+                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
+                    <img class="note-image" src="#" alt="img">
+                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
+                </figcaption>
+                <figcaption class="note d-flex flex-wrap">
+                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
+                    <img class="note-image" src="#" alt="img">
+                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
+                </figcaption>
+                <figcaption class="note d-flex flex-wrap">
+                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
+                    <img class="note-image" src="#" alt="img">
+                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
+                </figcaption>
+                <figcaption class="note d-flex flex-wrap">
+                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
+                    <img class="note-image" src="#" alt="img">
+                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
+                </figcaption>
+                <figcaption class="note d-flex flex-wrap">
+                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
+                    <img class="note-image" src="#" alt="img">
+                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
+                </figcaption>
                 <!--  -->
             </div>
         </main>
