--- a/index.html
+++ b/index.html
@@ -22,36 +22,36 @@
         <main class="d-flex content-center items-center">
             <div class="notes-wrapper d-flex flex-wrap">
                 <!--  -->
-                <figcaption class="note d-flex flex-wrap">
+                <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
-                </figcaption>
-                <figcaption class="note d-flex flex-wrap">
+                    <figcaption class="d-flex items-center"></figcaption>
+                </figure>   
+                <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
-                </figcaption>
-                <figcaption class="note d-flex flex-wrap">
+                    <figcaption class="d-flex items-center"></figcaption>
+                </figure>   
+                <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
-                </figcaption>
-                <figcaption class="note d-flex flex-wrap">
+                    <figcaption class="d-flex items-center"></figcaption>
+                </figure>   
+                <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
-                </figcaption>
-                <figcaption class="note d-flex flex-wrap">
+                    <figcaption class="d-flex items-center"></figcaption>
+                </figure>   
+                <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
-                </figcaption>
-                <figcaption class="note d-flex flex-wrap">
+                    <figcaption class="d-flex items-center"></figcaption>
+                </figure>   
+                <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">Lorem ipsum dolor sit amet, consectetur </figcaption>
-                </figcaption>
+                    <figcaption class="d-flex items-center"></figcaption>
+                </figure>   
                 <!--  -->
             </div>
         </main>
