css tricks line clamp (max 2 lines of caption)

--- a/index.html
+++ b/index.html
@@ -25,32 +25,44 @@
                 <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center"></figcaption>
+                    <figcaption class="d-flex items-center">
+                        <!--  -->
+                    </figcaption>
                 </figure>   
                 <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center"></figcaption>
+                    <figcaption class="d-flex items-center">
+                        <!--  -->
+                    </figcaption>
                 </figure>   
                 <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center"></figcaption>
+                    <figcaption class="d-flex items-center">
+                        <!--  -->
+                    </figcaption>
                 </figure>   
                 <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center"></figcaption>
+                    <figcaption class="d-flex items-center">
+                        <!--  -->
+                    </figcaption>
                 </figure>   
                 <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center"></figcaption>
+                    <figcaption class="d-flex items-center">
+                        <!--  -->
+                    </figcaption>
                 </figure>   
                 <figure class="note d-flex flex-wrap">
                     <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
                     <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center"></figcaption>
+                    <figcaption class="d-flex items-center">
+                        <!--  -->
+                    </figcaption>
                 </figure>   
                 <!--  -->
             </div>
