Approccio sbagliato: le card non erano dinamiche. Risolto: il numero di card generate e ora dipendono dal js, quindi dinamiche (grazie artur)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="https://cdn.jsdelivr.net/npm/axios@latest/dist/axios.min.js"></script>
         <script type="module" src="./assets/javascript/script.js"></script>
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/escape.css" />
         <title>Photo Blog</title>
     </head>
 
@@ -21,50 +22,7 @@
         </header>
         <main class="d-flex content-center items-center">
             <div class="notes-wrapper d-flex flex-wrap">
-                <!--  -->
-                <figure class="note d-flex flex-wrap">
-                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
-                    <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">
-                        <!--  -->
-                    </figcaption>
-                </figure>   
-                <figure class="note d-flex flex-wrap">
-                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
-                    <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">
-                        <!--  -->
-                    </figcaption>
-                </figure>   
-                <figure class="note d-flex flex-wrap">
-                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
-                    <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">
-                        <!--  -->
-                    </figcaption>
-                </figure>   
-                <figure class="note d-flex flex-wrap">
-                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
-                    <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">
-                        <!--  -->
-                    </figcaption>
-                </figure>   
-                <figure class="note d-flex flex-wrap">
-                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
-                    <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">
-                        <!--  -->
-                    </figcaption>
-                </figure>   
-                <figure class="note d-flex flex-wrap">
-                    <div class="pin"><img src="./assets/img/pin.svg" alt="pin"></div>
-                    <img class="note-image" src="#" alt="img">
-                    <figcaption class="d-flex items-center">
-                        <!--  -->
-                    </figcaption>
-                </figure>   
-                <!--  -->
+                <!-- figure note dynamic  -->  
             </div>
         </main>
     </body>
