added a whole style and logic of a  button info message for escape if modal is on bugs fixing

--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
         <script src="https://cdn.jsdelivr.net/npm/axios@latest/dist/axios.min.js"></script>
         <script type="module" src="./assets/javascript/script.js"></script>
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/escape.css" />
         <title>Photo Blog</title>
     </head>
 
     <body>
+
+        <button id="escape" class="">
+            Premi ESC o clicca sul post-it per uscire
+        </button>
+
         <header class="d-flex content-center items-center">
             <h1>estate '24</h1>
         </header>
