--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -11,6 +11,7 @@
         />
         <script src="https://cdn.jsdelivr.net/npm/axios@latest/dist/axios.min.js"></script>
         <script type="module" src="./assets/javascript/script.js"></script>
+        <link rel="stylesheet" href="./assets/css/utilities.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
         <link rel="stylesheet" href="./assets/css/escape.css" />
         <title>Photo Blog</title>
