--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <title>Photo Blog</title>
     </head>
 
-    <body class="hover-on">
+    <body>
 
         <button id="escape" class="">
             Premi ESC o clicca sul post-it per uscire
