--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="./assets/css/utilities.css" />
         <link rel="stylesheet" href="./assets/css/escape.css" />
         <link rel="stylesheet" href="./assets/css/loader.css" />
+        <link rel="stylesheet" href="./assets/css/add.css" />
         <title>Photo Blog</title>
     </head>
 
@@ -38,5 +39,7 @@
         </button>
         <!-- LOADER -->
         <div class="loader active"></div>
+        <!-- ADD NOTE BUTTON -->
+         <button id="add">Aggiungi un post-it!</button>
     </body>
 </html>
