added remove button logic (incomplete), added escape remove btn

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         <div class="add-remove-wrapper d-flex flex-col">
             <!-- ADD NOTE BUTTON -->
              <button id="add-btn">Aggiungi un post-it!</button>
+             <!-- ESCAPE REMOVE MODE BUTTON -->
+             <button id="escape-remove-btn" class="d-none">Ho finito!</button>
              <!-- REMOVE NOTE BUTTON -->
-             <button id="remove-btn">Elimina un post-it!</button>
+             <button id="remove-btn">Rimuovi un post-it!</button>
         </div>
         <!-- LOADER -->
         <div class="loader active"></div>
