--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         </main>
         <!-- ESCAPE BUTTON -->
         <button id="escape-btn" class="">
-            Premi ESC o clicca sul post-it per uscire
+            Premi ESC o clicca sulla polaroid per uscire
         </button>
         <div class="add-remove-wrapper d-flex flex-col">
             <!-- ADD NOTE BUTTON -->
-             <button id="add-btn">Aggiungi un post-it!</button>
+             <button id="add-btn">Aggiungi una polaroid!</button>
              <!-- ESCAPE REMOVE MODE BUTTON -->
              <button id="escape-remove-btn" class="d-none">Ho finito!</button>
              <!-- REMOVE NOTE BUTTON -->
-             <button id="remove-btn">Rimuovi un post-it!</button>
+             <button id="remove-btn">Rimuovi una polaroid!</button>
         </div>
         <!-- LOADER -->
         <div class="loader active"></div>
