--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </main>
         <!-- ESCAPE BUTTON -->
-        <button id="escape-modal-btn" class="">
+        <button id="popup-modal-btn" class="">
             Premi ESC o clicca sulla polaroid per uscire
         </button>
         <div class="add-remove-wrapper d-flex flex-col">
