--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             rel="stylesheet"
         />
         <script src="https://cdn.jsdelivr.net/npm/axios@latest/dist/axios.min.js"></script>
-        <script type="module" src="./assets/js/script.js"></script>
+        <script type="module" src="./assets/js/app/main.js"></script>
+        <script type="module" src="./assets/js/app/mediaQuery.js"></script>
         <link rel="stylesheet" href="./assets/css/utilities.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
         <link rel="stylesheet" href="./assets/css/loader.css" />
